# esp32power

./: CMakeLists.txt  README.md  sdkconfig
components/bluetooth/: CMakeLists.txt  bt_discovery.c  bt_discovery.h
components/html_pages/: CMakeLists.txt  csp  index.csp  pages.c  pages.h  status.csp
components/html_pages/csp-source/: Makefile  ReadMe.txt  StdAfx.cpp  StdAfx.h  csp.cpp  csp.dsp  csp.dsw  csp.opt  csp.plg  csp.vcproj  stats.csp  test.csp
components/lamp/: CMakeLists.txt  Kconfig.projbuild  lamp.c  lamp.h
components/manual-control/: CMakeLists.txt  manual.c  manual.h
components/power-sensor/: CMakeLists.txt  Kconfig.projbuild  power.c  power.h
components/web-wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
